:sparkles: feat: add popup loading components

--- a/src/_core/components/styles/variables.scss
+++ b/src/_core/components/styles/variables.scss
@@ -1,11 +1,23 @@
 $component-prefix: teco-core-;
 
+$background-color-black: #000000;
+$background-color-light: #ffffff;
+
 $animation-duration-base: 0.4s;
 $animation-duration-fast: 0.3s;
-$animation-timing-function-enter: ease-out;
-$animation-timing-function-exit: ease-in;
+$animation-timing-function-enter: cubic-bezier(0.7, 0.3, 0.1, 1);
+$animation-timing-function-exit: cubic-bezier(0.9, 0, 0.3, 0.7);
+
+// loading
+$loading-line-width: 4px;
+$loading-animation-duration: 0.85s;
 
 // overlay
 $overlay-z-index: 1200;
-
 $overlay-background-color: rgba(0, 0, 0, 0.5);
+
+// popup
+$popup-z-index: 1210;
+$popup-background-color: $background-color-light;
+$popup-animation-duration: $animation-duration-base;
+$popup-rounded-border-radius: 16px;
