--- a/src/_core/components/loading/loading.scss
+++ b/src/_core/components/loading/loading.scss
@@ -1,33 +1,78 @@
 @import '../styles/variables';
 
 .#{$component-prefix}loading {
-  display: flex;
+  display: inline-flex;
+  color: $loading-color;
   &__vertical {
     flex-direction: column;
+    align-items: center;
     justify-content: center;
+    .#{$component-prefix}loading {
+      &__spinner,
+      &__circular {
+        margin-bottom: 10px;
+      }
+    }
   }
   &__horizontal {
     align-items: center;
     flex-direction: row;
+    .#{$component-prefix}loading {
+      &__spinner,
+      &__circular {
+        margin-right: 10px;
+      }
+    }
   }
   &__spinner {
-    border-width: $loading-line-width;
-    border-style: solid;
-    border-top-color: transparent !important;
-    border-radius: 100%;
-    animation: spinner infinite $loading-animation-duration linear;
-    margin-right: 10px;
+    width: $loading-spinner-size;
+    height: $loading-spinner-size;
+    position: relative;
+    animation: #{$component-prefix}-rotate $loading-animation-duration steps(12)
+      infinite;
+    &__item {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+
+      &::before {
+        display: block;
+        width: 4px;
+        height: 25%;
+        margin: 0 auto;
+        content: ' ';
+        background-color: currentColor;
+        border-radius: 40%;
+      }
+
+      // Generate 12 item
+      @for $i from 1 through 8 {
+        &:nth-of-type(#{$i}) {
+          opacity: 1 - calc(0.75 / 8) * ($i - 1);
+          transform: rotate($i * 45deg);
+        }
+      }
+    }
   }
   &__circular {
-    border-width: $loading-line-width;
+    width: $loading-circular-size;
+    height: $loading-circular-size;
+    border-width: $loading-circular-width;
+    border-color: $loading-color;
     border-style: solid;
     border-top-color: transparent !important;
     border-radius: 100%;
-    margin-right: 10px;
-    animation: spinner infinite $loading-animation-duration linear;
+    animation: #{$component-prefix}-circular infinite $loading-animation-duration
+      linear;
+  }
+  &__text {
+    font-size: $loading-font-size;
+    color: $loading-color;
   }
 }
-@keyframes spinner {
+@keyframes #{$component-prefix}-circular {
   0% {
     transform: rotate(0);
   }
@@ -35,6 +80,16 @@
     transform: rotate(220deg);
   }
   100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes #{$component-prefix}-rotate {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
     transform: rotate(360deg);
   }
 }
