--- a/packages/components/src/popup/popup.scss
+++ b/packages/components/src/popup/popup.scss
@@ -1,6 +1,8 @@
 @import '../styles/variables';
 
-.#{$component-prefix}popup {
+$componentName: #{$component-prefix}popup;
+
+.#{$componentName} {
   position: fixed;
   z-index: $popup-z-index;
   max-height: 100%;
@@ -9,40 +11,40 @@
   animation-duration: $popup-animation-duration;
   -webkit-overflow-scrolling: touch;
 
-  &--center {
+  &.is-center {
     top: 50%;
     left: 50%;
     transform: translate3d(-50%, -50%, 0);
   }
 
-  &--top {
+  &.is-top {
     top: 0;
     left: 0;
     width: 100%;
 
-    &.#{$component-prefix}popup--rounded {
+    &.#{$componentName}.is-rounded {
       border-radius: 0 0 $popup-rounded-border-radius
         $popup-rounded-border-radius;
     }
   }
 
-  &--bottom {
+  &.is-bottom {
     bottom: 0;
     left: 0;
     width: 100%;
 
-    &.#{$component-prefix}popup--rounded {
+    &.#{$componentName}.is-rounded {
       border-radius: $popup-rounded-border-radius $popup-rounded-border-radius 0
         0;
     }
   }
 
-  &--right {
+  &.is-right {
     top: 50%;
     right: 0;
     transform: translate3d(0, -50%, 0);
 
-    &.#{$component-prefix}popup--rounded {
+    &.#{$componentName}.is-rounded {
       border-radius: $popup-rounded-border-radius 0 0
         $popup-rounded-border-radius;
     }
@@ -61,12 +63,12 @@
     }
   }
 
-  &--left {
+  &.is-left {
     top: 50%;
     left: 0;
     transform: translate3d(0, -50%, 0);
 
-    &.#{$component-prefix}popup--rounded {
+    &.#{$componentName}.is-rounded {
       border-radius: 0 $popup-rounded-border-radius $popup-rounded-border-radius
         0;
     }
